SalesforceProject2/src/objects/diz_obj_test2_c__c.object
<CustomObject>
    <fields>
        <fullName>TestTextFiels__c</fullName>
        <description>no descr</description>
        <label>TestTextFiels</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>diz_date__c</fullName>
        <inlineHelpText>tet</inlineHelpText>
        <label>diz_date__c</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>diz_picklist_c__c</fullName>
        <description>test</description>
        <label>diz_picklist__c</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>asd</fullName>
                </value>
                <value>
                    <fullName>34</fullName>
                </value>
                <value>
                    <fullName>xzx</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>picklistfield__c</fullName>
        <label>picklistfield</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>123</fullName>
                </value>
                <value>
                    <fullName>asd</fullName>
                </value>
                <value>
                    <fullName>xc</fullName>
                </value>
                <value>
                    <fullName>2323</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>diz_obj_test2</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>diz_obj_test2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>diz_obj_test2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>